# Qt_mychat

./: README.md
myChat/: CMakeLists.txt  chatwidget.cpp  chatwidget.h  chatwidget.ui  client.cpp  client.h  client.ui  login.cpp  login.h  login.ui  main.cpp  server.cpp  server.h  server.ui
